react-routerが扱うpathを'/'から'/react-router/'に変更

--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -1,2 +1,2 @@
-<%= react_router 'routes', 'HistoryLocation', {}, {prerender: true, prerender_location: '/state/' + params[:abbr], id: 'example'} %>
+<%= react_router 'routes', 'HistoryLocation', {}, {prerender: true, prerender_location: '/react-router/state/' + params[:abbr], id: 'example'} %>
 
