--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,2 +1,2 @@
-<%= react_router 'routes', 'HistoryLocation', {}, {prerender: true, prerender_location: '/', id: 'example'} %>
+<%= react_router 'routes', 'HistoryLocation', {}, {prerender: true, prerender_location: '/react-router/', id: 'example'} %>
 
